--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,13 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         julia-version: ['1.0', '1.3', 'nightly']
+        os: [ubuntu-latest, windows-latest, macOS-latest]
       fail-fast: false
-    name: Test Julia ${{ matrix.julia-version }}
+    name: Test Julia ${{ matrix.julia-version }} ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup julia
