--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,17 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: ['1.0', '1.3', 'nightly']
+        julia-version: ['1.0', '1.1', '1.2', '1.3', 'nightly']
         os: [ubuntu-latest, windows-latest, macOS-latest]
+        exclude:
+          - julia-version: '1.1'
+            os: windows-latest
+          - julia-version: '1.2'
+            os: windows-latest
+          - julia-version: '1.1'
+            os: macOS-latest
+          - julia-version: '1.2'
+            os: macOS-latest
       fail-fast: false
     name: Test Julia ${{ matrix.julia-version }} ${{ matrix.os }}
     steps:
