--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        # Edit ../../.mergify.yml when adding a new version.
         julia-version: ['1.0', '1.1', '1.2', '1.3', 'nightly']
         os: [ubuntu-latest, windows-latest, macOS-latest]
         exclude:
