--- a/.mergify.yml
+++ b/.mergify.yml
@@ -8,8 +8,10 @@ pull_request_rules:
     conditions:
       - base=master
       - "#approved-reviews-by>=1"
-      - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - status-success=Test Julia 1.0
+      - status-success=Test Julia 1.1
+      - status-success=Test Julia 1.2
+      - status-success=Test Julia 1.3
       - status-success=Benchmark
       - label=ready-to-merge:squash
       - label!=work-in-progress
@@ -20,8 +22,10 @@ pull_request_rules:
     conditions:
       - base=master
       - "#approved-reviews-by>=1"
-      - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - status-success=Test Julia 1.0
+      - status-success=Test Julia 1.1
+      - status-success=Test Julia 1.2
+      - status-success=Test Julia 1.3
       - status-success=Benchmark
       - label=ready-to-merge:rebase
       - label!=work-in-progress
@@ -32,8 +36,10 @@ pull_request_rules:
     conditions:
       - base=master
       - "#approved-reviews-by>=1"
-      - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - status-success=Test Julia 1.0
+      - status-success=Test Julia 1.1
+      - status-success=Test Julia 1.2
+      - status-success=Test Julia 1.3
       - status-success=Benchmark
       - label=ready-to-merge:merge
       - label!=work-in-progress
@@ -44,8 +50,10 @@ pull_request_rules:
     conditions:
       - author=tkf
       - base=master
-      - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - status-success=Test Julia 1.0
+      - status-success=Test Julia 1.1
+      - status-success=Test Julia 1.2
+      - status-success=Test Julia 1.3
       - status-success=Benchmark
       - label~=ready-to-merge:.*
     actions:
